# pytorch_ssd

./: .env.example  .gitignore  .mypy.ini  Dockerfile  README.md  README_JP.md  config.yaml  data_encoder.py  data_loader.py  docker-compose.yaml  image_dataset.py  pyproject.toml  requirements.txt  scratch.py  simple_ssd.py  ssd.py  tasks.py  train.py  trainer.py
.github/workflows/: ci.yml
configs/: config.yaml  debug.yaml
datasets/: image_dataset.py  transformations.py
logger/: logger.py
loggers/: base_logger.py  log_handler.py  print_logger.py  tensorboard_logger.py  textfile_logger.py
models/: explicit_ssd.py  ssd.py  transfer_learn_ssd.py
models/backbone/: backbone_loader.py  simple.py  torch_backbone.py  vgg16.py
models/layers/: downsample_block.py
models/loss/: confidence.py  localization.py  multibox.py  ssd.py
models/metrics/: map.py
scripts/: inference.py  prepare_test_data.py  scratch.py  train.py  trainer.py  visualize_default_box.py
src/configs/: config.yaml
src/datamodules/: pascal_datamodule.py
src/datasets/: image_dataset.py  transformations.py
src/loggers/: base_logger.py  log_handler.py  print_logger.py  textfile_logger.py
src/models/: lightning_model.py  ssd.py
src/scripts/: inference.py  prepare_test_data.py  train.py
tests/: test_annotations.json  test_backbones.py  test_config.yaml  test_dataloader.py  test_encoder.py  test_iou.py  test_loss.py  test_map.py  test_model.py  test_nms.py  test_ssd.py
trainer/: trainer.py
utils/: data_encoder.py  default_box.py  iou.py  nms.py  non_maximum_suppression.py  profiler.py
visualize/: batch_visualizer.py  visualize_batch.py  visualize_default_box.py
(+31 files in other folders)
