[tool.poetry]
name = "pytorch-ssd"
version = "0.1.0"
description = ""
authors = ["Jacob Biros <jakebiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
torch = "2.1.0"
torchvision = "^0.16.0"
imgaug = "0.4.0"
opencv-python = "^4.8.1.78"
xmltodict = "0.12.0"
pandas = "^2.1.3"
invoke = "^2.2.0"
albumentations = "^1.3.1"
tqdm = "^4.66.1"
wandb = "^0.16.0"
lazy-loader = "^0.3"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
