[tool.poetry]
name = "pytorch-ssd"
version = "0.1.0"
description = ""
authors = ["Jacob Biros <jakebiros@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.9.18"
torch = "2.1.0"
torchvision = "^0.16.0"
imgaug = "0.4.0"
opencv-python = "^4.8.1.78"
xmltodict = "0.12.0"
pandas = "^2.1.3"
invoke = "^2.2.0"
albumentations = "^1.3.1"
tqdm = "^4.66.1"
wandb = "^0.16.0"
lazy-loader = "^0.3"
torchmetrics = "^1.2.0"
pycocotools = "^2.0.7"
timm = "^0.9.12"
ipython = "^8.18.1"
lightning = "^2.1.2"
hydra-core = "^1.3.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[tool.mypy]
python_version = 3.10
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "torchvision",
    "numpy",
    "pandas",
    "albumentations",
    "yaml",

    "cv2",
    "xmltodict",
    "matplotlib",
    "tqdm",
    "invoke",
    "imgaug"
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
